--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -15,7 +15,7 @@
     <div
     
         [ngStyle]="{
-            'background-image': isDay ? 'url(https://avatarfiles.alphacoders.com/375/375602.png)' : 'url(https://giffiles.alphacoders.com/895/8951.gif)',
+            'background-image': isDay ? 'url(https://i.pinimg.com/originals/24/42/7c/24427c3fc2e69abba6fa968f507a694c.gif)' : 'url(https://giffiles.alphacoders.com/895/8951.gif)',
             'background-size': 'cover',
             'background-position': 'center',
             'width': '50%',
@@ -24,7 +24,7 @@
         class="bg-slate-800 p-6 rounded-lg text-white shadow-md transition transform animate-bounce-in"
     >
        
-        <div class="flex justify-between mb-4 text-sm text-gray-300">
+        <div class="flex justify-between mb-4 text-sm text-gray-400">
             <div class="flex items-center">
                 <mat-icon>wb_sunny</mat-icon>
                 <span>{{sunriseTime}}</span>
